--- a/calc01.css
+++ b/calc01.css
@@ -28,7 +28,10 @@
     font-size: 2rem;
     color: #333;
     background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, .04));
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), 
+    inset 0 1px 0 0 rgba(255, 255, 255, .45), 
+    inset 0 -1px 0 0 rgba(255, 255, 255, .15), 
+    0 1px 0 0 rgba(255, 255, 255, .15);
     text-shadow: 0 1px rgba(255, 255, 255, .4);
 }
 
@@ -39,6 +42,10 @@
 .operator {
     color: #fff;
     background-color: #eebb24;
+}
+
+.operator:hover {
+    background-color: #cca121;
 }
 
 .clear {
